# modern_opengl_examples

./: CMakeLists.txt  README.md  cube.cpp  cube_fragment.glsl  cube_vertex.glsl  first_triangle.cpp  first_triangle_shader.cpp  load_shader.cpp  load_shader.h  matrices.cpp  matrices_vertex.glsl  window.cpp
